--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="section-hero-data">
                     <p class="hero-top-data">this is me</p>
                     <h1 class="hero-heading">Rohit <br>Srivastav</h1>
-                    <p class="hero-para">I'm Rohit Srivastav. Full-stack Developer <br>youtuber and Freelancer. fj sh dsj c djhc hhs hddddddjs jshdbc jdhcbbbbbbbb</p>
+                    <p class="hero-para">I'm Rohit Srivastav.  a Full-stack Developer with expertise in diverse technologies. </p>
                     <div><a href="#" class="btn hireme-btn">Hier me</a></div>
                 </div>
                 <!-- ===================
@@ -193,7 +193,7 @@
     <section class="section section-services hii">
         <div class="container">
             <h2 class="common-heading">Services Offers</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, obcaecati?</p>
+            <p>With a passion for problem-solving, I excel in both front-end and back-end development. My skills include web and mobile application development, ensuring efficient and robust solutions.</p>
         </div>
 
         <div class="container grid grid-three-column">
