--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="./protfolio.html" class="navbar-link protofolio-link">Protofolio</a></li>
                 <li><a href="./contact.html" class="navbar-link comtac-link">Contact</a></li>
             </ul>
-            <img src="./protfolio/imges/moon.png" width="10%" id="ico" loading="lazy">
+            <img src="./imges/moon.png" width="10%" id="ico" loading="lazy">
 
         </nav>
         <div class="mobile-navbar-btn">
