--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="./protfolio.html" class="navbar-link protofolio-link">Protofolio</a></li>
                 <li><a href="./contact.html" class="navbar-link comtac-link">Contact</a></li>
             </ul>
-            <img src="./imges/moon.png" width="10%" id="ico" loading="lazy">
+            <img src="./imges/moon.png" width="10%" id="ico">
 
         </nav>
         <div class="mobile-navbar-btn">
@@ -50,7 +50,7 @@
             right side image section
             =========================-->
                 <div class="section-hero-image">
-                    <img src="../protfolio/imges/hero.jpg" alt="" class="one hero-img" loading="lazy">
+                    <img src="../protfolio/imges/hero.jpg" alt="" class="one hero-img">
                 </div>
             </div>
         </section>
@@ -61,7 +61,7 @@
     <section class="section-biodata section  hii">
         <div class="container grid grid-two-column">
             <div class="bio-image">
-                <img src="../protfolio/imges/bio-data.png" loading="lazy">
+                <img src="../protfolio/imges/bio-data.png">
             </div>
 
             <!-- right side edit -->
@@ -125,37 +125,37 @@
 
         <div class="container grid grid-three-column protfolio-images">
             <div class="img-overlay p-btn--1 ">
-                <img src="../protfolio/imges/project1.jpg" alt="my works" loading="lazy">
+                <img src="../protfolio/imges/project1.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 1</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 ">
-                <img src="../protfolio/imges/project2.jpg" alt="my works" loading="lazy">
+                <img src="../protfolio/imges/project2.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 2</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 ">
-                <img src="../protfolio/imges/project1.jpg" alt="my works" loading="lazy">
+                <img src="../protfolio/imges/project1.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 3</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--3 ">
-                <img src="../protfolio/imges/project4.jpg" alt="my works" loading="lazy">
+                <img src="../protfolio/imges/project4.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 4</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--2 ">
-                <img src="../protfolio/imges/project5.jpg" alt="my works" loading="lazy">
+                <img src="../protfolio/imges/project5.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 5</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--2 ">
-                <img src="../protfolio/imges/project5.jpg" alt="my works" loading="lazy">
+                <img src="../protfolio/imges/project5.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 6</a>
                 </div>
@@ -252,7 +252,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -265,7 +265,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -278,7 +278,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -291,7 +291,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -304,7 +304,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -317,7 +317,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -330,7 +330,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -343,7 +343,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -356,7 +356,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt="" loading="lazy"></figure>
+                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
