--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My portfolio website to showcase the work i have done so far the Services i provide  all my professionals life.">
+    <meta name="keywords" content="HTML, CSS, JavaScript protfolio website ">
+    <meta name="author" content="Rohit Srivastav">
+
     <title>Rohit sri</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
@@ -26,7 +30,7 @@
                 <li><a href="./protfolio.html" class="navbar-link protofolio-link">Protofolio</a></li>
                 <li><a href="./contact.html" class="navbar-link comtac-link">Contact</a></li>
             </ul>
-            <img src="./imges/moon.png" width="10%" id="ico">
+            <img src="../protfolio/imges/moon.png" width="10%" id="ico" >
 
         </nav>
         <div class="mobile-navbar-btn">
@@ -42,15 +46,15 @@
             <div class="container grid grid-two-column">
                 <div class="section-hero-data">
                     <p class="hero-top-data">this is me</p>
-                    <h1 class="hero-heading">Rohit <br>Srivastav</h1>
-                    <p class="hero-para">I'm Rohit Srivastav.  a Full-stack Developer with expertise in diverse technologies. </p>
+                    <h1 class="hero-heading">Rohit Srivastav</h1>
+                    <p class="hero-para">I'm Rohit Srivastav. Full-stack Developer <br>youtuber and Freelancer. fj sh dsj c djhc hhs hddddddjs jshdbc jdhcbbbbbbbb</p>
                     <div><a href="#" class="btn hireme-btn">Hier me</a></div>
                 </div>
                 <!-- ===================
             right side image section
             =========================-->
                 <div class="section-hero-image">
-                    <img src="../protfolio/imges/hero.jpg" alt="" class="one hero-img">
+                    <img src="./imges/hero.jpg" alt="" class="one hero-img" >
                 </div>
             </div>
         </section>
@@ -61,7 +65,7 @@
     <section class="section-biodata section  hii">
         <div class="container grid grid-two-column">
             <div class="bio-image">
-                <img src="../protfolio/imges/bio-data.png">
+                <img src="./imges/bio-data.png" >
             </div>
 
             <!-- right side edit -->
@@ -125,37 +129,37 @@
 
         <div class="container grid grid-three-column protfolio-images">
             <div class="img-overlay p-btn--1 ">
-                <img src="../protfolio/imges/project1.jpg" alt="my works">
+                <img src="./imges/project1.jpg" alt="my works" >
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 1</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 ">
-                <img src="../protfolio/imges/project2.jpg" alt="my works">
+                <img src="./imges/project2.jpg" alt="my works" >
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 2</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 ">
-                <img src="../protfolio/imges/project1.jpg" alt="my works">
+                <img src="./imges/project3.jpg" alt="my works" >
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 3</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--3 ">
-                <img src="../protfolio/imges/project4.jpg" alt="my works">
+                <img src="./imges/project4.jpg" alt="my works" >
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 4</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--2 ">
-                <img src="../protfolio/imges/project5.jpg" alt="my works">
+                <img src="./imges/project5.jpg" alt="my works" >
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 5</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--2 ">
-                <img src="../protfolio/imges/project5.jpg" alt="my works">
+                <img src="./imges/project6.jpg" alt="my works" >
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 6</a>
                 </div>
@@ -193,10 +197,10 @@
     <section class="section section-services hii">
         <div class="container">
             <h2 class="common-heading">Services Offers</h2>
-            <p>With a passion for problem-solving, I excel in both front-end and back-end development. My skills include web and mobile application development, ensuring efficient and robust solutions.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, obcaecati?</p>
         </div>
 
-        <div class="container grid grid-three-column">
+        <div class="container grid grid-three-column har-pal">
             <div class="service-box">
                 <ion-icon name="desktop-outline" class="service-icon"></ion-icon>
                 <h3>Web Design</h3>
@@ -252,7 +256,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -265,7 +269,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -278,7 +282,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -291,7 +295,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -304,7 +308,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -317,7 +321,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -330,7 +334,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -343,7 +347,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -356,7 +360,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="../protfolio/imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -397,24 +401,24 @@
         </div>
 
         <div class="section-contact-main contact-container">
-            <form action="#">
+            <form action="https://formspree.io/f/mwkddvog" method="POST">
                 <div class="grid grid-two-column">
                     <div>
                         <label for="username"></label>
-                        <input type="text" name="username" placeholder="Username" id="username" class="mai">
+                        <input type="text" name="username" required placeholder="Username" id="username" class="mai" autocomplete="off">
                     </div>
                     <div>
                         <label for="email"></label>
-                        <input type="email" name="username" placeholder="example@gmail.com" id="username" class="mai">
+                        <input type="email" name="username" required placeholder="example@gmail.com" id="username" class="mai" autocomplete="off">
                     </div>
                 </div>
                 <div>
                     <label for="subject"></label>
-                    <input type="text" name="subject" placeholder="subject" id="subject" class="mai">
+                    <input type="text" name="subject" required placeholder="subject" id="subject" class="mai" autocomplete="off">
                 </div>
                 <div>
                     <label for="textarea"></label>
-                    <textarea name="textarea" id="textarea" cols="30" rows="10" class="mai"></textarea>
+                    <textarea name="message" required id="textarea" cols="30" rows="10" class="mai" minlength="5"></textarea>
                 </div>
                 <div>
                     <input type="submit" name="submit" id="submit" class="btn">
