--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <a href="./index.html">
             <h2 class="logo"><b><span>R</span>ohit <span>S</span>ri</b></h2>
         </a>
-        <nav class="navbar">
+        <nav class="navbar ">
             <ul class="navbar-lists">
                 <li><a href="./index.html" class="navbar-link home-link">Home</a></li>
                 <li><a href="./about.html" class="navbar-link about-link">About</a></li>
@@ -27,7 +27,12 @@
                 <li><a href="./contact.html" class="navbar-link comtac-link">Contact</a></li>
             </ul>
             <img src="../protfolio/imges/moon.png" width="10%" id="ico">
+
         </nav>
+        <div class="mobile-navbar-btn">
+            <ion-icon name="menu-outline" class="mobile-nav-icon"></ion-icon>
+            <ion-icon name="close-outline" class="mobile-nav-icon"></ion-icon>
+        </div>
     </header>
 
     <!-- ============================================
@@ -40,24 +45,24 @@
         </div>
 
         <div class="section-contact-main contact-container">
-            <form action="#">
+            <form action="https://formspree.io/f/mwkddvog" method="POST">
                 <div class="grid grid-two-column">
                     <div>
                         <label for="username"></label>
-                        <input type="text" name="username" placeholder="Username" id="username" class="mai">
+                        <input type="text" name="username" required placeholder="Username" id="username" class="mai" autocomplete="off">
                     </div>
                     <div>
                         <label for="email"></label>
-                        <input type="email" name="username" placeholder="example@gmail.com" id="username" class="mai">
+                        <input type="email" name="username" required placeholder="example@gmail.com" id="username" class="mai" autocomplete="off">
                     </div>
                 </div>
                 <div>
                     <label for="subject"></label>
-                    <input type="text" name="subject" placeholder="subject" id="subject" class="mai">
+                    <input type="text" name="subject" required placeholder="subject" id="subject" class="mai" autocomplete="off">
                 </div>
                 <div>
                     <label for="textarea"></label>
-                    <textarea name="textarea" id="textarea" cols="30" rows="10" class="mai"></textarea>
+                    <textarea name="message" required id="textarea" cols="30" rows="10" class="mai" minlength="5"></textarea>
                 </div>
                 <div>
                     <input type="submit" name="submit" id="submit" class="btn">
@@ -65,7 +70,6 @@
             </form>
         </div>
     </section>
-
 
 
 
