--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <a href="./index.html">
             <h2 class="logo"><b><span>R</span>ohit <span>S</span>ri</b></h2>
         </a>
-        <nav class="navbar">
+        <nav class="navbar ">
             <ul class="navbar-lists">
                 <li><a href="./index.html" class="navbar-link home-link">Home</a></li>
                 <li><a href="./about.html" class="navbar-link about-link">About</a></li>
@@ -27,7 +27,12 @@
                 <li><a href="./contact.html" class="navbar-link comtac-link">Contact</a></li>
             </ul>
             <img src="../protfolio/imges/moon.png" width="10%" id="ico">
+
         </nav>
+        <div class="mobile-navbar-btn">
+            <ion-icon name="menu-outline" class="mobile-nav-icon"></ion-icon>
+            <ion-icon name="close-outline" class="mobile-nav-icon"></ion-icon>
+        </div>
     </header>
 
     <!-- ===========================
