--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Rohit Srivastav">
 
     <title>Rohit sri</title>
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script defer src="script.js"></script>
 </head>
@@ -30,7 +30,7 @@
                 <li><a href="./protfolio.html" class="navbar-link protofolio-link">Protofolio</a></li>
                 <li><a href="./contact.html" class="navbar-link comtac-link">Contact</a></li>
             </ul>
-            <img src="../protfolio/imges/moon.png" width="10%" id="ico" >
+            <img src="../protfolio/imges/moon.png" width="10%" id="ico">
 
         </nav>
         <div class="mobile-navbar-btn">
@@ -48,13 +48,13 @@
                     <p class="hero-top-data">this is me</p>
                     <h1 class="hero-heading">Rohit Srivastav</h1>
                     <p class="hero-para">I'm Rohit Srivastav. Full-stack Developer <br>youtuber and Freelancer. fj sh dsj c djhc hhs hddddddjs jshdbc jdhcbbbbbbbb</p>
-                    <div><a href="#" class="btn hireme-btn">Hier me</a></div>
+                    <div><a href="./contact.html" class="btn hireme-btn">Hier me</a></div>
                 </div>
                 <!-- ===================
             right side image section
             =========================-->
                 <div class="section-hero-image">
-                    <img src="./imges/hero.jpg" alt="" class="one hero-img" >
+                    <img src="./imges/hero.jpg" alt="" class="one hero-img">
                 </div>
             </div>
         </section>
@@ -65,7 +65,7 @@
     <section class="section-biodata section  hii">
         <div class="container grid grid-two-column">
             <div class="bio-image">
-                <img src="./imges/bio-data.png" >
+                <img src="./imges/bio-data.png">
             </div>
 
             <!-- right side edit -->
@@ -117,7 +117,7 @@
         design protfolio section
     ===========================================-->
     <section class="section section-protfolio hii" id="protfolio-section">
-        <div class="container">
+        <div class="container hello">
             <div class="common-heading">Latest Work</div>
             <p>Developed real-time project using HTML, CSS, JavaScript, and MERN stack, showcasing one year of practical design and development expertise.</p>
         </div>
@@ -129,37 +129,37 @@
 
         <div class="container grid grid-three-column protfolio-images">
             <div class="img-overlay p-btn--1 ">
-                <img src="./imges/project1.jpg" alt="my works" >
+                <img src="./imges/project1.jpg" alt="my works" class="good">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 1</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 ">
-                <img src="./imges/project2.jpg" alt="my works" >
+                <img src="./imges/project2.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 2</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 ">
-                <img src="./imges/project3.jpg" alt="my works" >
+                <img src="./imges/project3.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 3</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--3 ">
-                <img src="./imges/project4.jpg" alt="my works" >
+                <img src="./imges/project4.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 4</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--2 ">
-                <img src="./imges/project5.jpg" alt="my works" >
+                <img src="./imges/project5.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 5</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--2 ">
-                <img src="./imges/project6.jpg" alt="my works" >
+                <img src="./imges/project6.jpg" alt="my works">
                 <div class="overlay">
                     <a href="#" target="_blank" class="common-heading">Project 6</a>
                 </div>
@@ -256,7 +256,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png"></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -269,7 +269,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -282,7 +282,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -295,7 +295,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -308,7 +308,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -321,7 +321,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -334,7 +334,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -347,7 +347,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
@@ -360,7 +360,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima maxime inventore quos reiciendis quis! Asperiores sit id dolor! Incidunt, ut!</p>
                     </div>
                     <div class="swiper-client-data grid grid-two-column">
-                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt="" ></figure>
+                        <figure><img src="./imges/2022-12-03_edited-removebg-preview.png" alt=""></figure>
                         <div class="client-data-details">
                             <p>web Developer</p>
                             <p>rohit sri</p>
